<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    tools:context=".Final">

    <TextView
        android:id="@+id/tv_win"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/winner"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_win"
        app:layout_constraintVertical_bias="0"
        android:layout_marginTop="75dp"
        android:gravity="center_horizontal"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/first"
                android:textSize="18dp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tv_first"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="15:25"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/second"
                android:textStyle="bold"
                android:textSize="18dp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/tv_second"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="15:25"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/third"
                android:textStyle="bold"
                android:textSize="18dp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/tv_third"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="15:25"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"/>
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85"
        >

        <Button
            android:id="@+id/btn_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backToHome"
            android:textSize="18dp"
            app:backgroundTint="@null"
            android:background="@drawable/button_style"
            android:textColor="@color/black"
            >

        </Button>
        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btn_fighter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fighter"
            android:textSize="18dp"
            app:backgroundTint="@null"
            android:background="@drawable/button_style"
            android:textColor="@color/black">
        </Button>
        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textSize="18dp"
            app:backgroundTint="@null"
            android:background="@drawable/button_style"
            android:textColor="@color/black">
        </Button>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>