<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    android:layout_gravity="center"
    tools:context=".Game">

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/tv_gameNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gameNum"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12" />

    <Space
        android:id="@+id/space"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <LinearLayout
        android:id="@+id/ScorePart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/space"
        app:layout_constraintVertical_bias="0"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:textColor="@color/scoreBlueLine"
                    />

                <EditText
                    android:id="@+id/et_winNumber"
                    android:layout_width="50dp"
                    android:textColor="@color/scoreBlueLine"
                    android:layout_height="wrap_content"/>

            </LinearLayout>


            <ScrollView
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:background="@color/scoreScrollBlue">

                <RadioGroup
                    android:id="@+id/rg_win"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/rb_win1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/win01"
                        android:textColor="@color/winItemsColor"
                        android:textSize="15dp" />
                    <RadioButton
                        android:id="@+id/rb_win2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15dp"
                        android:textColor="@color/winItemsColor"
                        android:text="@string/win02"/>
                    <RadioButton
                        android:id="@+id/rb_win3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15dp"
                        android:textColor="@color/winItemsColor"
                        android:text="@string/win03"/>
                    <RadioButton
                        android:id="@+id/rb_win4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15dp"
                        android:textColor="@color/winItemsColor"
                        android:text="@string/win04"/>
                </RadioGroup>

            </ScrollView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btn_myTeamGetPoint"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:text="+"
                        android:layout_margin="5dp"/>


                    <Button
                        android:id="@+id/btn_myTeamLossPoint"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:text="-"
                        android:layout_margin="5dp"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tv_myTeamScore"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:text="25"
                        android:textSize="50dp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:background="@color/scoreBlue"
                        android:gravity="center"/>

                    <TextView
                        android:id="@+id/tv_myTeamName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="資工女排"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:layout_marginTop="8dp"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_otherTeamScore"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:text="0"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:background="@color/scoreOrange"
                    android:textSize="50dp"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/tv_otherTeamName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="觀光女排"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_otherTeamGetPoint"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:text="+"
                    android:layout_margin="5dp"/>


                <Button
                    android:id="@+id/btn_otherTeamLossPoint"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:text="-"
                    android:layout_margin="5dp"/>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number"
                    android:textColor="@color/scoreOrangeLine"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_lossNumber"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/scoreOrangeLine" />

            </LinearLayout>

            <ScrollView
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:background="@color/scoreScrollOrange">

                <RadioGroup
                    android:id="@+id/rg_loss"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/rb_loss1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15dp"
                        android:textColor="@color/lossItemsColor"
                        android:text="@string/loss01"/>
                    <RadioButton
                        android:id="@+id/rb_loss2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15dp"
                        android:textColor="@color/lossItemsColor"
                        android:text="@string/loss02"/>
                    <RadioButton
                        android:id="@+id/rb_loss3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15dp"
                        android:textColor="@color/lossItemsColor"
                        android:text="@string/loss03"/>
                    <RadioButton
                        android:id="@+id/rb_loss4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15dp"
                        android:textColor="@color/lossItemsColor"
                        android:text="@string/loss04"/>
                    <RadioButton
                        android:id="@+id/rb_loss5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15dp"
                        android:textColor="@color/lossItemsColor"
                        android:text="@string/loss05"/>
                    <RadioButton
                        android:id="@+id/rb_loss6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15dp"
                        android:textColor="@color/lossItemsColor"
                        android:text="@string/loss06"/>
                    <RadioButton
                        android:id="@+id/rb_loss7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15dp"
                        android:textColor="@color/lossItemsColor"
                        android:text="@string/loss07"/>
                </RadioGroup>

            </ScrollView>


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/ScorePart"
        app:layout_constraintVertical_bias="0.95"

        >

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textSize="18dp"
            app:backgroundTint="@null"
            android:background="@drawable/button_style"
            android:textColor="@color/black"
            >

        </Button>
        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btn_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop"
            android:textSize="18dp"
            app:backgroundTint="@null"
            android:background="@drawable/button_style"
            android:textColor="@color/black">

        </Button>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>